styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
  padding: 0;
  margin: 0;
  font-family: 'Barlow', sans-serif;
  line-height: 1.6;
  font-size: 18px;
  scroll-behavior: smooth;
}

* {
  box-sizing: border-box;
}

a {
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}
.lp-gradient-text{
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}
.react-markdown img{
  width: 70%;
  margin: auto;
  display: flex;
}
.builtin{
  color: tomato;
}
.keyword{
  color: #4694e2;
}
.punctuation{
  color: #99e24d;
}
.tag{
  color: #a0e546;
}
.property-access{
  color: #4fff98;
}
.class-name{
  color: #98ca3b;
}
.operator{
  color: #a0e546;
}
.code-line{
  white-space: break-spaces;
}
.comment{
  color: #8c8c8c;
}
.function{
  color: #4ce476;
}
pre{
  background-color: #3f3f3f;
  border-radius: 10px;
  padding: 0.5rem;
  color: #FFF;
}

._1udoG {
  z-index: 10;
}

